Full page header.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
   </head>
   
   <body>
-    <h1></h1>
+    <!-- THIS IS THE HEADER SECTION -->
+    <div class="company">
+      <div class="logo">
+        <img src="./resources/images/logo.png"/>
+        <span>SECRET AGENT SUPPLY INC.</span>
+      </div>
+    </div>
+    <!-- THIS IS THE BANNER SECTION -->
+    <div class="banner"></div>
+    <!-- THIS IS THE NAVIGATION -->
+    <div class="navigation"></div>
+    <!-- THESE ARE THE ITEMS -->
+    <div class="store"></div>
+    <!-- THIS IS THE STORE INFO -->
+    <div class="info"></div>
+    <!-- THIS IS THE FOOTER -->
+    <div class="footer"></div>
   </body>
 </html>
