Full Banner with splash headline.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
       </div>
     </div>
     <!-- THIS IS THE BANNER SECTION -->
-    <div class="banner"></div>
+    <div class="banner">
+      <div class="splash">
+        <div class="headline">
+          <h4>NEW ARRIVAL</h4>
+          <h1>SPORT BIKES AND MOTORCYCLES<h1>
+        </div>
+      </div>
+    </div>
     <!-- THIS IS THE NAVIGATION -->
     <div class="navigation"></div>
     <!-- THESE ARE THE ITEMS -->
