Full navigation bar.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
       </div>
     </div>
     <!-- THIS IS THE NAVIGATION -->
-    <div class="navigation"></div>
+    <div class="navigation">
+      <nav>
+        <span>Eyewear</span>
+        <span>Apparel</span>
+        <span>Gadgets</span>
+        <span>Vehicles</span>
+        <span>Classes</span>
+        <span>Contact</span>
+      </nav>
+    </div>
     <!-- THESE ARE THE ITEMS -->
     <div class="store"></div>
     <!-- THIS IS THE STORE INFO -->
