Full page store with items.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,22 @@
       </nav>
     </div>
     <!-- THESE ARE THE ITEMS -->
-    <div class="store"></div>
+    <div class="store">
+      <div class="items">
+        <div class="item">
+          <img src="./resources/images/pen.png"/>
+          <span>Exploding Pen</span>
+        </div>
+        <div class="item">
+          <img src="./resources/images/watch.png"/>
+          <span>Cellular Watch</span>
+        </div>
+        <div id="glasses" class="item">
+          <img src="./resources/images/glasses.png"/>
+          <span>Thermal Glasses</span>
+        </div>
+      </div>
+    </div>
     <!-- THIS IS THE STORE INFO -->
     <div class="info"></div>
     <!-- THIS IS THE FOOTER -->
