--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
       </div>
     </div>
     <!-- THIS IS THE STORE INFO -->
-    <div class="info"></div>
+    <div class="biz-info">
+      <div class="info">
+        <div class="location">
+          <h4>Location</h4>
+          <span>-47.346436, 84.32354</span>
+        </div>
+        <div class="hours">
+          <h4>Hours</h4>
+          <span>0800 - 1800</span>        
+        </div>
+      </div>
+    </div>
     <!-- THIS IS THE FOOTER -->
     <div class="footer"></div>
   </body>
