Full page footer.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       </div>
     </div>
     <!-- THIS IS THE FOOTER -->
-    <div class="footer"></div>
+    <div class="footer">
+      <div class="text-content">
+        <span>&#169 Secret Agent Supply Inc.</span>
+      </div>
+    </div>
   </body>
 </html>
