1024 header, banner, and nav.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <span>Vehicles</span>
         <span>Classes</span>
         <span>Contact</span>
+        <span2>Menu</span2>
       </nav>
     </div>
     <!-- THESE ARE THE ITEMS -->
