470 Store, info, and footer.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img src="./resources/images/pen.png"/>
           <span>Exploding Pen</span>
         </div>
-        <div class="item">
+        <div id="watch" class="item">
           <img src="./resources/images/watch.png"/>
           <span>Cellular Watch</span>
         </div>
