HTML check corrections.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="splash">
         <div class="headline">
           <h4>NEW ARRIVAL</h4>
-          <h1>SPORT BIKES AND MOTORCYCLES<h1>
+          <h1>SPORT BIKES AND MOTORCYCLES</h1>
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
         <span>Vehicles</span>
         <span>Classes</span>
         <span>Contact</span>
-        <span2>Menu</span2>
+        <span class="truncatednav">Menu</span>
       </nav>
     </div>
     <!-- THESE ARE THE ITEMS -->
@@ -69,7 +69,7 @@
     <!-- THIS IS THE FOOTER -->
     <div class="footer">
       <div class="text-content">
-        <span>&#169 Secret Agent Supply Inc.</span>
+        <span>&#169; Secret Agent Supply Inc.</span>
       </div>
     </div>
   </body>
